--- a/css/style.css
+++ b/css/style.css
@@ -1,581 +1,1 @@
-@font-face {
-  font-family: "Oswald";
-  src: url("../fonts/Oswald-Regular.woff") format("woff"), url("../fonts/Oswald-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Oswald";
-  src: url("../fonts/Oswald-Bold.woff") format("woff"), url("../fonts/Oswald-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-.main-container {
-  margin: 0 auto;
-  padding: 0 5%;
-}
-@media screen and (min-width: 768px) and (max-width: 1170px) {
-  .main-container {
-    max-width: 1170px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .main-container {
-    max-width: 600px;
-  }
-}
-@media screen and (max-width: 400px) {
-  .main-container {
-    max-width: 300px;
-  }
-}
-.header {
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-  background-color: #fff;
-  color: #474444;
-  box-shadow: 0 .3rem .5rem #474747;
-}
-.header__container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.header__logo {
-  font-family: "Oswald";
-  font-size: 7rem;
-  font-weight: 400;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.header__char {
-  color: #fd5433;
-}
-.menu {
-  font-size: 1.7rem;
-  font-family: "Oswald";
-}
-.menu__list {
-  padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-  list-style-type: none;
-}
-.menu__list-item {
-  float: left;
-}
-.menu__list:after {
-  display: block;
-  content: "";
-  clear: left;
-}
-.menu__link {
-  display: inline-block;
-  font-weight: 700;
-  padding: 4.7rem 1.5rem;
-  color: #474444;
-  transition: color 0.2s ease-in;
-}
-.menu__link:hover,
-.menu__link:focus {
-  background-color: #fd5433;
-  color: #fff;
-  outline: none;
-}
-@media screen and (max-width: 399px) {
-  .menu {
-    font-size: 3rem;
-  }
-  .menu__link {
-    display: inline-block;
-    font-weight: 700;
-    padding: 2.3rem 1.3rem;
-    color: #474444;
-  }
-}
-.home {
-  font-family: "Oswald";
-  color: #fff;
-}
-.home {
-  position: relative;
-  background-image: url("../img/Banner.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  text-align: center;
-  padding-top: 22.9rem;
-  padding-bottom: 33.4rem;
-}
-@media screen and (min-width: 401px) and (max-width: 850px) {
-  .home {
-    padding-top: 15.3rem;
-    padding-bottom: 22.3rem;
-  }
-}
-@media screen and (max-width: 400px) {
-  .home {
-    padding-top: 11.4rem;
-    padding-bottom: 16.7rem;
-    background-attachment: scroll;
-  }
-}
-.home:before {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  background-color: #000;
-  opacity: .4;
-}
-.home__content {
-  position: relative;
-}
-.home__text {
-  text-transform: uppercase;
-  font-size: 12rem;
-}
-@media screen and (min-width: 401px) and (max-width: 850px) {
-  .home__text {
-    font-size: 8rem;
-  }
-}
-@media screen and (max-width: 400px) {
-  .home__text {
-    font-size: 6rem;
-  }
-}
-.home__item {
-  margin-top: 5.7rem;
-}
-.home__button {
-  padding: 1.3rem 5.4rem 1.1rem;
-  font-size: 3.2rem;
-  border-radius: .5rem;
-}
-.home__button:focus {
-  outline: .2rem solid #fff;
-}
-.title {
-  font-family: "Oswald";
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.button {
-  transition: background-color 0.3s ease-in;
-  font-family: "Oswald";
-  font-weight: 700;
-  color: #fff;
-  background: #fd5433;
-  box-shadow: inset 0 4px 12px -3px #fff, 0 6px 10px -3px #000;
-}
-.button:focus,
-.button:hover {
-  background-color: #ff6d51;
-  color: #fff;
-}
-.section {
-  margin-top: 3.8rem;
-}
-.section__title {
-  margin-bottom: 3.6rem;
-  font-size: 3.2rem;
-  text-align: center;
-  font-weight: 700;
-  color: #fd5433;
-}
-.section__content {
-  border-top: .1rem solid #828282;
-}
-@media screen and (max-width: 399px) {
-  .section__title {
-    font-size: 5.3rem;
-  }
-}
-.services {
-  padding-bottom: 8.1rem;
-  border-bottom: .1rem solid #828282;
-}
-.services__content {
-  padding-top: 6.5rem;
-}
-.services__container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.services__name {
-  margin-bottom: 3.4rem;
-  font-size: 3rem;
-  color: #474747;
-}
-.services__branding,
-.services__design,
-.services__marketing {
-  box-sizing: border-box;
-  width: 32%;
-  padding-top: 21rem;
-  padding-left: 2.3rem;
-  padding-right: 2.3rem;
-  text-align: center;
-  background-position-x: center;
-  background-size: 50% 50%;
-  background-repeat: no-repeat;
-}
-.services__branding {
-  background-image: url("../img/pen.svg");
-}
-.services__design {
-  background-image: url("../img/desktop.svg");
-}
-.services__marketing {
-  background-image: url("../img/mic.svg");
-}
-@media screen and (max-width: 767px) {
-  .services__branding,
-  .services__design,
-  .services__marketing {
-    padding-top: 25rem;
-  }
-}
-@media screen and (max-width: 554px) {
-  .services__branding,
-  .services__design,
-  .services__marketing {
-    width: 100%;
-    padding-left: 4.3rem;
-    padding-right: 4.3rem;
-    margin-bottom: 3.6rem;
-  }
-  .services__marketing {
-    margin-bottom: 0;
-  }
-}
-@media screen and (max-width: 399px) {
-  .services__branding,
-  .services__design,
-  .services__marketing {
-    padding-top: 32rem;
-  }
-  .services__name {
-    font-size: 4.3rem;
-  }
-  .services__info {
-    font-size: 3rem;
-  }
-}
-.protfolio__content {
-  border-top: 0;
-  padding-top: 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-.portfolio__link {
-  width: 16.65%;
-  transition: opacity 0.3s ease-in, box-shadow 0.3s ease-in;
-}
-.portfolio__link:hover {
-  opacity: .7;
-  box-shadow: 0 0.5rem 2rem #000, 0 -0.5rem 2rem #000, 0.5rem 0 2rem #000, -0.5rem 0 2rem #000;
-}
-.portfolio__img {
-  display: block;
-}
-.about__content {
-  padding-top: 6.6rem;
-}
-.about__tabs {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 6.6rem;
-}
-.about__info {
-  position: relative;
-  padding: 6.7rem 0 4.3rem;
-  background-color: #fd5433;
-  color: #fff;
-}
-.about__container {
-  display: flex;
-  justify-content: space-between;
-}
-.about__info-container {
-  width: 44%;
-}
-.about__tab {
-  transition: opacity 0.4s ease-in;
-}
-.about__tab:hover {
-  cursor: pointer;
-  opacity: .7;
-}
-.about__tab-img {
-  display: block;
-}
-.about__switch,
-.about__Elizabeth-Stevens,
-.about__Diana-Paterns,
-.about__Kate-Eastwood,
-.about__John-Smith {
-  display: none;
-}
-#John-Smith:checked ~ .about__John-Smith,
-#Elizabeth-Stevens:checked ~ .about__Elizabeth-Stevens,
-#Diana-Paterns:checked ~ .about__Diana-Paterns,
-#Kate-Eastwood:checked ~ .about__Kate-Eastwood {
-  display: block;
-}
-.about__info-title {
-  font-size: 2.2rem;
-  text-transform: none;
-  margin-bottom: 5.3rem;
-}
-.about__social-links {
-  margin-top: 5.1rem;
-}
-.about__social-link {
-  display: inline-block;
-  background-size: cover;
-  width: 2.6rem;
-  height: 2.6rem;
-  text-indent: -9999px;
-}
-.about__social-link:hover {
-  opacity: .7;
-}
-.about__social-link:not(:last-child) {
-  margin-right: 2rem;
-}
-.about__social-link_fb {
-  background-image: url("../img/Facebook.png");
-}
-.about__social-link_gp {
-  background-image: url("../img/Google+.png");
-}
-.about__social-link_vm {
-  background-image: url("../img/Vimeo.png");
-}
-.about__social-link_dl {
-  background-image: url("../img/Dribbble.png");
-}
-.about__social-link_yt {
-  background-image: url("../img/YouTube.png");
-}
-.about__skill {
-  display: flex;
-  align-items: center;
-}
-.about__skill:not(:first-child) {
-  margin-top: 1.3rem;
-}
-.skill__name {
-  width: 35%;
-}
-.skill__bar[value]::-webkit-progress-value {
-  background: #fff;
-}
-.skill__bar[value]::-webkit-progress-bar {
-  background: #fd5433;
-}
-.skill__bar[value]::-moz-progress-bar {
-  background: #fff;
-}
-.skill__bar {
-  height: 1rem;
-  width: 50%;
-  margin: 0;
-  background: #fd5433;
-  border: none;
-  color: #fff;
-}
-.skill__percent {
-  margin-left: 1.8em;
-}
-.posts {
-  padding-bottom: 9.9rem;
-  border-bottom: .1rem solid #474444;
-  color: #686868;
-}
-.posts__content {
-  padding-top: 9.9rem;
-}
-.posts__container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.blog {
-  display: flex;
-  width: 47%;
-}
-.blog:not(:first-child) {
-  margin-top: 8.8rem;
-}
-.blog:nth-child(2) {
-  margin-top: 0;
-}
-.blog__container {
-  width: 45%;
-}
-.blog__container:first-child {
-  margin-right: 3rem;
-}
-.blog__img {
-  display: block;
-  transition: opacity 0.4s ease-in;
-}
-.blog__img:hover {
-  opacity: .5;
-}
-.blog__header {
-  padding-bottom: 1.5rem;
-  position: relative;
-}
-.blog__title {
-  font-size: 2.5rem;
-  margin-bottom: 1.6rem;
-}
-.blog__link {
-  color: #3d3c3c;
-  transition: color .4s;
-}
-.blog__date {
-  font-size: 1.5rem;
-  font-family: "Oswald";
-  font-weight: 700;
-}
-.blog__header:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 30%;
-  border-bottom: 5px solid #fd5433;
-}
-.blog__info {
-  margin-top: 3.6rem;
-}
-@media screen and (min-width: 1401px) {
-  html {
-    font-size: 70%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1400px) {
-  html {
-    font-size: 62.5%;
-  }
-}
-@media screen and (max-width: 767px) {
-  html {
-    font-size: 52.5%;
-  }
-}
-@media screen and (max-width: 399px) {
-  html {
-    font-size: 32.5%;
-  }
-}
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  font-size: 1.6rem;
-  background: #fff;
-}
-h1 {
-  font-size: 1.75rem;
-}
-h2 {
-  font-size: 1.625rem;
-}
-h3 {
-  font-size: 1.5rem;
-}
-h4 {
-  font-size: 1.375rem;
-}
-p {
-  margin-bottom: 1rem;
-  font-family: Arial;
-}
-p:last-child {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-img {
-  display: inline-block;
-  max-width: 100%;
-  height: auto;
-}
-a {
-  text-decoration: none;
-}
-a:focus,
-a:hover {
-  color: #fd5433;
-}
-.contact__content {
-  background-image: url("../img/bg-city.jpg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 3rem;
-  width: 100%;
-  position: relative;
-  border: 0;
-}
-.feedback {
-  padding: 2.8rem 1rem 0;
-  text-align: center;
-  font-size: 2rem;
-  color: #fd5433;
-}
-::-webkit-input-placeholder {
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__name {
-  box-sizing: border-box;
-  padding: 2.1rem 2.1rem 1.9rem;
-  width: 48.5%;
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__email {
-  box-sizing: border-box;
-  padding: 2.1rem 2.1rem 1.9rem;
-  margin-left: 2.7%;
-  width: 48%;
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__message {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 2.1rem 2.1rem 1.9rem;
-  margin-top: 2.8rem;
-  font-size: 2rem;
-  color: #fd5433;
-}
-.feedback__button {
-  font-size: 2.6rem;
-  box-sizing: border-box;
-  width: 100%;
-  padding: 1.5rem 0 1.2rem;
-  margin-top: 2.4rem;
-  border: none;
-  cursor: pointer;
-}
-.footer {
-  margin-top: 8.3rem;
-  border-top: .1rem solid #fff;
-}
-.footer__content {
-  margin-top: 2rem;
-  text-align: center;
-  font-size: 1.8rem;
-  color: #fff;
-}
+.header__logo,.home__text,.title{text-transform:uppercase}.blog__date,.button,.header__logo,.home,.menu,.title{font-family:Oswald}.blog__header:after,.home:before{content:"";left:0}.feedback,.footer__content,.home,.section__title{text-align:center}@font-face{font-family:Oswald;src:url(../fonts/Oswald-Regular.woff) format("woff"),url(../fonts/Oswald-Regular.woff2) format("woff2");font-weight:400;font-style:normal}@font-face{font-family:Oswald;src:url(../fonts/Oswald-Bold.woff) format("woff"),url(../fonts/Oswald-Bold.woff2) format("woff2");font-weight:700;font-style:normal}.main-container{margin:0 auto;padding:0 5%}.header__logo,.menu__list{margin-top:0;margin-bottom:0}@media screen and (min-width:768px) and (max-width:1170px){.main-container{max-width:1170px}}@media screen and (max-width:767px){.main-container{max-width:600px}}.header{position:fixed;z-index:100;width:100%;background-color:#fff;color:#474444;box-shadow:0 .3rem .5rem #474747}.header__container{display:flex;flex-wrap:wrap;justify-content:space-between}.header__logo{font-size:7rem;font-weight:400}.blog__date,.button,.menu__link,.section__title{font-weight:700}.header__char{color:#fd5433}.menu{font-size:1.7rem}.menu__list{padding-left:0;list-style-type:none}.menu__list-item{float:left}.menu__list:after{display:block;content:"";clear:left}.menu__link{display:inline-block;padding:4.7rem 1.5rem;color:#474444;transition:color .2s ease-in}.menu__link:focus,.menu__link:hover{background-color:#fd5433;color:#fff;outline:0}@media screen and (max-width:399px){.menu{font-size:3rem}.menu__link{display:inline-block;font-weight:700;padding:2.3rem 1.3rem;color:#474444}}.home{color:#fff;position:relative;background-image:url(../img/Banner.jpg);background-size:cover;background-attachment:fixed;padding-top:22.9rem;padding-bottom:33.4rem}.home:before{position:absolute;height:100%;width:100%;top:0;background-color:#000;opacity:.4}.about__info,.blog__header,.home__content{position:relative}.home__text{font-size:12rem}@media screen and (min-width:401px) and (max-width:850px){.home{padding-top:15.3rem;padding-bottom:22.3rem}.home__text{font-size:8rem}}@media screen and (max-width:400px){.main-container{max-width:300px}.home{padding-top:11.4rem;padding-bottom:16.7rem;background-attachment:scroll}.home__text{font-size:6rem}}.home__item{margin-top:5.7rem}.home__button{padding:1.3rem 5.4rem 1.1rem;font-size:3.2rem;border-radius:.5rem}.home__button:focus{outline:#fff solid .2rem}.title{margin-top:0;margin-bottom:0}.button{transition:background-color .3s ease-in;color:#fff;background:#fd5433;box-shadow:inset 0 4px 12px -3px #fff,0 6px 10px -3px #000}.button:focus,.button:hover{background-color:#ff6d51;color:#fff}.section{margin-top:3.8rem}.section__title{margin-bottom:3.6rem;font-size:3.2rem;color:#fd5433}.section__content{border-top:.1rem solid #828282}@media screen and (max-width:399px){.section__title{font-size:5.3rem}}.services{padding-bottom:8.1rem;border-bottom:.1rem solid #828282}.services__content{padding-top:6.5rem}.services__container{display:flex;justify-content:space-between;flex-wrap:wrap}.services__name{margin-bottom:3.4rem;font-size:3rem;color:#474747}.services__branding,.services__design,.services__marketing{box-sizing:border-box;width:32%;padding-top:21rem;padding-left:2.3rem;padding-right:2.3rem;text-align:center;background-position-x:center;background-size:50% 50%;background-repeat:no-repeat}.services__branding{background-image:url(../img/pen.svg)}.services__design{background-image:url(../img/desktop.svg)}.services__marketing{background-image:url(../img/mic.svg)}@media screen and (max-width:767px){.services__branding,.services__design,.services__marketing{padding-top:25rem}}@media screen and (max-width:554px){.services__branding,.services__design,.services__marketing{width:100%;padding-left:4.3rem;padding-right:4.3rem;margin-bottom:3.6rem}.services__marketing{margin-bottom:0}}@media screen and (max-width:399px){.services__branding,.services__design,.services__marketing{padding-top:32rem}.services__name{font-size:4.3rem}.services__info{font-size:3rem}}.protfolio__content{border-top:0;padding-top:0;display:flex;flex-wrap:wrap}.portfolio__link{width:16.65%;transition:opacity .3s ease-in,box-shadow .3s ease-in}.about__tab,.blog__img{transition:opacity .4s ease-in}.portfolio__link:hover{opacity:.7;box-shadow:0 .5rem 2rem #000,0 -.5rem 2rem #000,.5rem 0 2rem #000,-.5rem 0 2rem #000}.portfolio__img{display:block}.about__content{padding-top:6.6rem}.about__tabs{display:flex;justify-content:space-between;margin-bottom:6.6rem}.about__info{padding:6.7rem 0 4.3rem;background-color:#fd5433;color:#fff}.about__container{display:flex;justify-content:space-between}.about__info-container{width:44%}.about__tab:hover{cursor:pointer;opacity:.7}.about__tab-img{display:block}.about__Diana-Paterns,.about__Elizabeth-Stevens,.about__John-Smith,.about__Kate-Eastwood,.about__switch{display:none}#Diana-Paterns:checked~.about__Diana-Paterns,#Elizabeth-Stevens:checked~.about__Elizabeth-Stevens,#John-Smith:checked~.about__John-Smith,#Kate-Eastwood:checked~.about__Kate-Eastwood{display:block}.about__info-title{font-size:2.2rem;text-transform:none;margin-bottom:5.3rem}.about__social-links{margin-top:5.1rem}.about__social-link{display:inline-block;background-size:cover;width:2.6rem;height:2.6rem;text-indent:-9999px}.about__social-link:hover{opacity:.7}.about__social-link:not(:last-child){margin-right:2rem}.about__social-link_fb{background-image:url(../img/Facebook.png)}.about__social-link_gp{background-image:url(../img/Google+.png)}.about__social-link_vm{background-image:url(../img/Vimeo.png)}.about__social-link_dl{background-image:url(../img/Dribbble.png)}.about__social-link_yt{background-image:url(../img/YouTube.png)}.about__skill{display:flex;align-items:center}.about__skill:not(:first-child){margin-top:1.3rem}.skill__name{width:35%}.skill__bar[value]::-webkit-progress-value{background:#fff}.skill__bar[value]::-webkit-progress-bar{background:#fd5433}.skill__bar[value]::-moz-progress-bar{background:#fff}.skill__bar{height:1rem;width:50%;margin:0;background:#fd5433;border:none;color:#fff}.skill__percent{margin-left:1.8em}.posts{padding-bottom:9.9rem;border-bottom:.1rem solid #474444;color:#686868}.posts__content{padding-top:9.9rem}.posts__container{display:flex;justify-content:space-between;flex-wrap:wrap}.blog{display:flex;width:47%}.blog:not(:first-child){margin-top:8.8rem}.blog:nth-child(2){margin-top:0}.blog__container{width:45%}.blog__container:first-child{margin-right:3rem}.blog__img{display:block}.blog__img:hover{opacity:.5}.blog__header{padding-bottom:1.5rem}.blog__title{font-size:2.5rem;margin-bottom:1.6rem}.blog__link{color:#3d3c3c;transition:color .4s}.blog__date{font-size:1.5rem}.blog__header:after{position:absolute;bottom:0;width:30%;border-bottom:5px solid #fd5433}.blog__info{margin-top:3.6rem}@media screen and (min-width:1401px){html{font-size:70%}}@media screen and (min-width:768px) and (max-width:1400px){html{font-size:62.5%}}@media screen and (max-width:767px){html{font-size:52.5%}}@media screen and (max-width:399px){html{font-size:32.5%}}body{margin:0;font-family:Arial,sans-serif;font-size:1.6rem;background:#fff}h1{font-size:1.75rem}h2{font-size:1.625rem}h3{font-size:1.5rem}h4{font-size:1.375rem}p{margin-bottom:1rem;font-family:Arial}p:last-child{margin-top:0;margin-bottom:0}img{display:inline-block;max-width:100%;height:auto}a{text-decoration:none}a:focus,a:hover{color:#fd5433}.contact__content{background-image:url(../img/bg-city.jpg);background-attachment:fixed;background-repeat:no-repeat;background-size:cover;padding-bottom:3rem;width:100%;position:relative;border:0}.feedback{padding:2.8rem 1rem 0;font-size:2rem;color:#fd5433}.feedback__email,.feedback__message,.feedback__name{padding:2.1rem 2.1rem 1.9rem;font-size:2rem;color:#fd5433;box-sizing:border-box}::-webkit-input-placeholder{font-size:2rem;color:#fd5433}.feedback__name{width:48.5%}.feedback__email{margin-left:2.7%;width:48%}.feedback__message{width:100%;margin-top:2.8rem}.feedback__button{font-size:2.6rem;box-sizing:border-box;width:100%;padding:1.5rem 0 1.2rem;margin-top:2.4rem;border:none;cursor:pointer}.footer{margin-top:8.3rem;border-top:.1rem solid #fff}.footer__content{margin-top:2rem;font-size:1.8rem;color:#fff}
