--- a/test/style.css
+++ b/test/style.css
@@ -10,61 +10,41 @@
   font-weight: 700;
   font-style: normal;
 }
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #fff;
-}
-h1 {
-  font-size: 28px;
-}
-h2 {
-  font-size: 26px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 22px;
-}
-p {
-  margin-bottom: 10px;
-  font-family: Arial;
-}
-p:last-child {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-img {
-  max-width: 100%;
-  height: auto;
-}
 .main-container {
-  min-width: 768px;
-  max-width: 1170px;
   margin: 0 auto;
-  padding: 0 2%;
+  padding: 0 5%;
+}
+@media screen and (min-width: 768px) and (max-width: 1170px) {
+  .main-container {
+    max-width: 1170px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .main-container {
+    max-width: 600px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .main-container {
+    max-width: 300px;
+  }
 }
 .header {
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  background-color: #fff;
   color: #474444;
+  box-shadow: 0 .3rem .5rem #474747;
 }
 .header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+  flex-wrap: wrap;
   justify-content: space-between;
-}
-.title {
-  font-family: "Oswald";
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 .header__logo {
   font-family: "Oswald";
-  font-size: 70px;
+  font-size: 7rem;
   font-weight: 400;
   text-transform: uppercase;
   margin-top: 0;
@@ -74,7 +54,7 @@ img {
   color: #fd5433;
 }
 .menu {
-  font-size: 17px;
+  font-size: 1.7rem;
   font-family: "Oswald";
 }
 .menu__list {
@@ -91,21 +71,12 @@ img {
   content: "";
   clear: left;
 }
-a {
-  text-decoration: none;
-}
-a:focus,
-a:hover {
-  color: #fd5433;
-}
-.link {
-  color: inherit;
-}
 .menu__link {
   display: inline-block;
-  font-size: 17px;
   font-weight: 700;
-  padding: 47px 15px;
+  padding: 4.7rem 1.5rem;
+  color: #474444;
+  transition: color 0.2s ease-in;
 }
 .menu__link:hover,
 .menu__link:focus {
@@ -113,327 +84,498 @@ a:hover {
   color: #fff;
   outline: none;
 }
+@media screen and (max-width: 399px) {
+  .menu {
+    font-size: 3rem;
+  }
+  .menu__link {
+    display: inline-block;
+    font-weight: 700;
+    padding: 2.3rem 1.3rem;
+    color: #474444;
+  }
+}
 .home {
   font-family: "Oswald";
+  color: #fff;
 }
-.home-container {
+.home {
   position: relative;
-  background-color: #000;
-  opacity: .9;
-}
-.home-container:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
   background-image: url("../img/Banner.jpg");
   background-size: cover;
   background-attachment: fixed;
+  text-align: center;
+  padding-top: 22.9rem;
+  padding-bottom: 33.4rem;
+}
+@media screen and (min-width: 401px) and (max-width: 850px) {
+  .home {
+    padding-top: 15.3rem;
+    padding-bottom: 22.3rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .home {
+    padding-top: 11.4rem;
+    padding-bottom: 16.7rem;
+    background-attachment: scroll;
+  }
+}
+.home:before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  opacity: .4;
 }
 .home__content {
-  color: #fff;
-  text-align: center;
-  padding-top: 229px;
-  padding-bottom: 334px;
+  position: relative;
 }
 .home__text {
   text-transform: uppercase;
-  font-size: 120px;
+  font-size: 12rem;
+}
+@media screen and (min-width: 401px) and (max-width: 850px) {
+  .home__text {
+    font-size: 8rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .home__text {
+    font-size: 6rem;
+  }
 }
 .home__item {
-  margin-top: 57px;
+  margin-top: 5.7rem;
 }
 .home__button {
-  padding: 13px 54px 11px;
-  font-size: 32px;
-  border-radius: 5px;
+  padding: 1.3rem 5.4rem 1.1rem;
+  font-size: 3.2rem;
+  border-radius: .5rem;
 }
 .home__button:focus {
-  outline: 2px solid #fff;
+  outline: .2rem solid #fff;
+}
+.title {
+  font-family: "Oswald";
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .button {
-  -webkit-transition: background 0.5s ease-in;
-  transition: background 0.5s ease-in;
+  transition: background-color 0.3s ease-in;
+  font-family: "Oswald";
   font-weight: 700;
   color: #fff;
   background: #fd5433;
-  border-top: 2px solid #ff6d51;
-  -webkit-box-shadow: 0 6px 4px -4px #000;
-  box-shadow: 0 6px 4px -4px #000;
+  box-shadow: inset 0 4px 12px -3px #fff, 0 6px 10px -3px #000;
 }
 .button:focus,
 .button:hover {
-  background: #ff6d51;
+  background-color: #ff6d51;
   color: #fff;
 }
 .section {
-  margin-top: 38px;
-}
-.section__services {
-  padding-bottom: 81px;
-  border-bottom: 1px solid #474444;
+  margin-top: 3.8rem;
 }
 .section__title {
-  margin-bottom: 36px;
+  margin-bottom: 3.6rem;
+  font-size: 3.2rem;
   text-align: center;
   font-weight: 700;
   color: #fd5433;
 }
 .section__content {
-  padding-top: 36px;
-  border-top: 1px solid #474444;
+  border-top: .1rem solid #828282;
 }
-.section__name {
-  margin-bottom: 34px;
-  font-size: 30px;
-  font-weight: 700;
+@media screen and (max-width: 399px) {
+  .section__title {
+    font-size: 5.3rem;
+  }
+}
+.services {
+  padding-bottom: 8.1rem;
+  border-bottom: .1rem solid #828282;
+}
+.services__content {
+  padding-top: 6.5rem;
+}
+.services__container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.services__name {
+  margin-bottom: 3.4rem;
+  font-size: 3rem;
   color: #474747;
 }
-.section__branding,
-.section__design,
-.section__marketing {
-  display: inline-block;
-  vertical-align: bottom;
+.services__branding,
+.services__design,
+.services__marketing {
+  box-sizing: border-box;
   width: 32%;
+  padding-top: 21rem;
+  padding-left: 2.3rem;
+  padding-right: 2.3rem;
   text-align: center;
-  padding-top: 200px;
-  margin-right: 1%;
   background-position-x: center;
+  background-size: 50% 50%;
   background-repeat: no-repeat;
 }
-.section__branding {
-  background-image: url("../img/PEN.jpg");
+.services__branding {
+  background-image: url("../img/pen.svg");
 }
-.section__design {
-  background-image: url("../img/PC.jpg");
+.services__design {
+  background-image: url("../img/desktop.svg");
 }
-.section__marketing {
-  background-image: url("../img/Mic.jpg");
-  margin-right: 0;
+.services__marketing {
+  background-image: url("../img/mic.svg");
 }
-.section__services-content {
-  width: 78%;
-  margin: 0 auto;
+@media screen and (max-width: 767px) {
+  .services__branding,
+  .services__design,
+  .services__marketing {
+    padding-top: 25rem;
+  }
+}
+@media screen and (max-width: 554px) {
+  .services__branding,
+  .services__design,
+  .services__marketing {
+    width: 100%;
+    padding-left: 4.3rem;
+    padding-right: 4.3rem;
+    margin-bottom: 3.6rem;
+  }
+  .services__marketing {
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 399px) {
+  .services__branding,
+  .services__design,
+  .services__marketing {
+    padding-top: 32rem;
+  }
+  .services__name {
+    font-size: 4.3rem;
+  }
+  .services__info {
+    font-size: 3rem;
+  }
 }
 .protfolio__content {
   border-top: 0;
+  padding-top: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio__link {
+  width: 16.65%;
+  transition: opacity 0.3s ease-in, box-shadow 0.3s ease-in;
+}
+.portfolio__link:hover {
+  opacity: .7;
+  box-shadow: 0 0.5rem 2rem #000, 0 -0.5rem 2rem #000, 0.5rem 0 2rem #000, -0.5rem 0 2rem #000;
 }
 .portfolio__img {
-  float: left;
-  width: 16.66%;
-}
-.portfolio__column:after {
   display: block;
-  content: "";
-  clear: left;
-}
-.about__header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-top: 65px;
-  margin-bottom: 65px;
 }
 .about__content {
+  padding-top: 6.6rem;
+}
+.about__tabs {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 6.6rem;
+}
+.about__info {
   position: relative;
-  padding: 66px 0 45px;
+  padding: 6.7rem 0 4.3rem;
   background-color: #fd5433;
-  background-repeat: no-repeat;
+  color: #fff;
+}
+.about__container {
+  display: flex;
+  justify-content: space-between;
+}
+.about__info-container {
+  width: 44%;
+}
+.about__tab {
+  transition: opacity 0.4s ease-in;
+}
+.about__tab:hover {
+  cursor: pointer;
+  opacity: .7;
+}
+.about__tab-img {
+  display: block;
+}
+.about__switch,
+.about__Elizabeth-Stevens,
+.about__Diana-Paterns,
+.about__Kate-Eastwood,
+.about__John-Smith {
+  display: none;
+}
+#John-Smith:checked ~ .about__John-Smith,
+#Elizabeth-Stevens:checked ~ .about__Elizabeth-Stevens,
+#Diana-Paterns:checked ~ .about__Diana-Paterns,
+#Kate-Eastwood:checked ~ .about__Kate-Eastwood {
+  display: block;
+}
+.about__info-title {
+  font-size: 2.2rem;
+  text-transform: none;
+  margin-bottom: 5.3rem;
+}
+.about__social-links {
+  margin-top: 5.1rem;
+}
+.about__social-link {
+  display: inline-block;
   background-size: cover;
+  width: 2.6rem;
+  height: 2.6rem;
+  text-indent: -9999px;
 }
-.member__info {
-  display: inline-block;
-  vertical-align: top;
-  color: #fff;
-  width: 47%;
+.about__social-link:hover {
+  opacity: .7;
 }
-.member__link_active {
-  position: relative;
+.about__social-link:not(:last-child) {
+  margin-right: 2rem;
 }
-.member__link_active:after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 100%;
-  -webkit-transform: translate(-50%, 65px);
-  transform: translate(-50%, 65px);
-  z-index: 1;
-  border: 20px solid transparent;
-  border-top: 40px solid #fff;
+.about__social-link_fb {
+  background-image: url("../img/Facebook.png");
 }
-.member__title {
-  font: 22px "Oswald-Bold";
-  color: inherit;
-  margin: 0 0 38px;
+.about__social-link_gp {
+  background-image: url("../img/Google+.png");
 }
-.member__text {
-  font-family: Arial;
-  color: #fff;
-  width: 80%;
-  margin-top: 12px;
+.about__social-link_vm {
+  background-image: url("../img/Vimeo.png");
 }
-.member__socials {
-  margin-top: 53px;
+.about__social-link_dl {
+  background-image: url("../img/Dribbble.png");
 }
-.member__socials-link {
-  text-decoration: none;
-  margin-right: 20px;
+.about__social-link_yt {
+  background-image: url("../img/YouTube.png");
 }
-.skill {
-  display: inline-block;
-  vertical-align: top;
-  width: 50%;
-  color: #fff;
+.about__skill {
+  display: flex;
+  align-items: center;
 }
-.skill__column {
-  display: inline-block;
-  vertical-align: top;
-  width: 30%;
-  color: #fff;
+.about__skill:not(:first-child) {
+  margin-top: 1.3rem;
 }
-.skill__column-bar {
-  padding-top: 59px;
-  width: 59%;
+.skill__name {
+  width: 35%;
 }
-.skill__text:not(:nth-of-type(1)) {
-  font-family: Arial;
-  color: #fff;
-  width: 80%;
-  margin-top: 12px;
+.skill__bar[value]::-webkit-progress-value {
+  background: #fff;
 }
-.skill__bar-row:not(:nth-of-type(1)) {
-  display: inline-block;
-  vertical-align: middle;
-  width: 100%;
-  margin-top: 13px;
-}
-progress::-webkit-progress-bar {
+.skill__bar[value]::-webkit-progress-bar {
   background: #fd5433;
 }
-progress::-webkit-progress-value {
+.skill__bar[value]::-moz-progress-bar {
   background: #fff;
 }
 .skill__bar {
-  display: inline-block;
-  vertical-align: middle;
-  height: 10px;
-  width: 75%;
+  height: 1rem;
+  width: 50%;
   margin: 0;
-  background: #fff;
+  background: #fd5433;
+  border: none;
   color: #fff;
 }
-.posts__column {
-  display: inline-block;
-  vertical-align: top;
-  width: 49%;
-  margin-right: 10px;
+.skill__percent {
+  margin-left: 1.8em;
 }
-.posts__item-column {
-  margin-right: 0;
-}
-.posts__article {
-  margin-top: 90px;
-}
-.posts__content {
-  padding-bottom: 99px;
-  border-bottom: 1px solid #474444;
-}
-.posts__column-content {
-  display: inline-block;
-  vertical-align: top;
-  width: 48%;
-  margin-left: 17px;
+.posts {
+  padding-bottom: 9.9rem;
+  border-bottom: .1rem solid #474444;
   color: #686868;
 }
-.posts__title {
-  font: 25px "Oswald-Bold";
+.posts__content {
+  padding-top: 9.9rem;
+}
+.posts__container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.blog {
+  display: flex;
+  width: 47%;
+}
+.blog:not(:first-child) {
+  margin-top: 8.8rem;
+}
+.blog:nth-child(2) {
+  margin-top: 0;
+}
+.blog__container {
+  width: 45%;
+}
+.blog__container:first-child {
+  margin-right: 3rem;
+}
+.blog__img {
+  display: block;
+  transition: opacity 0.4s ease-in;
+}
+.blog__img:hover {
+  opacity: .5;
+}
+.blog__header {
+  padding-bottom: 1.5rem;
+  position: relative;
+}
+.blog__title {
+  font-size: 2.5rem;
+  margin-bottom: 1.6rem;
+}
+.blog__link {
   color: #3d3c3c;
+  transition: color .4s;
+}
+.blog__date {
+  font-size: 1.5rem;
+  font-family: "Oswald";
+  font-weight: 700;
+}
+.blog__header:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 30%;
+  border-bottom: 5px solid #fd5433;
+}
+.blog__info {
+  margin-top: 3.6rem;
+}
+@media screen and (min-width: 1401px) {
+  html {
+    font-size: 70%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1400px) {
+  html {
+    font-size: 62.5%;
+  }
+}
+@media screen and (max-width: 767px) {
+  html {
+    font-size: 52.5%;
+  }
+}
+@media screen and (max-width: 399px) {
+  html {
+    font-size: 32.5%;
+  }
+}
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 1.6rem;
+  background: #fff;
+}
+h1 {
+  font-size: 1.75rem;
+}
+h2 {
+  font-size: 1.625rem;
+}
+h3 {
+  font-size: 1.5rem;
+}
+h4 {
+  font-size: 1.375rem;
+}
+p {
+  margin-bottom: 1rem;
+  font-family: Arial;
+}
+p:last-child {
   margin-top: 0;
   margin-bottom: 0;
 }
-.posts__date {
-  margin-top: 10px;
-  padding-bottom: 18px;
-  font: 15px "Oswald-Bold";
+img {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
 }
-.posts__month-hr {
-  padding-bottom: 14px;
-  border-bottom: 4px solid #fd5433;
+a {
+  text-decoration: none;
 }
-.posts__column-text {
-  width: 88%;
-  margin-top: 30px;
-  font: 16px Arial;
+a:focus,
+a:hover {
+  color: #fd5433;
 }
 .contact__content {
   background-image: url("../img/bg-city.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 30px;
+  padding-bottom: 3rem;
   width: 100%;
   position: relative;
   border: 0;
 }
 .feedback {
-  padding: 28px 10px 0;
+  padding: 2.8rem 1rem 0;
   text-align: center;
-  font-size: 20px;
+  font-size: 2rem;
   color: #fd5433;
 }
 ::-webkit-input-placeholder {
-  font-size: 20px;
+  font-size: 2rem;
   color: #fd5433;
 }
 .feedback__name {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 21px 21px 19px;
+  padding: 2.1rem 2.1rem 1.9rem;
   width: 48.5%;
-  font-size: 20px;
+  font-size: 2rem;
   color: #fd5433;
 }
 .feedback__email {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 21px 21px 19px;
+  padding: 2.1rem 2.1rem 1.9rem;
   margin-left: 2.7%;
   width: 48%;
-  font-size: 20px;
+  font-size: 2rem;
   color: #fd5433;
 }
 .feedback__message {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  padding: 21px 21px 19px;
-  margin-top: 28px;
-  font-size: 20px;
+  padding: 2.1rem 2.1rem 1.9rem;
+  margin-top: 2.8rem;
+  font-size: 2rem;
   color: #fd5433;
 }
 .feedback__button {
-  font: 26px "Oswald-Bold";
-  -webkit-box-sizing: border-box;
+  font-size: 2.6rem;
   box-sizing: border-box;
   width: 100%;
-  padding: 15px 0 12px;
-  margin-top: 24px;
-  border-bottom: 0;
-  border-right: 0;
-  border-left: 0;
+  padding: 1.5rem 0 1.2rem;
+  margin-top: 2.4rem;
+  border: none;
   cursor: pointer;
 }
 .footer {
-  margin-top: 83px;
-  border-top: 1px solid #fff;
+  margin-top: 8.3rem;
+  border-top: .1rem solid #fff;
 }
 .footer__content {
-  margin-top: 20px;
+  margin-top: 2rem;
   text-align: center;
-  font-size: 18px;
+  font-size: 1.8rem;
   color: #fff;
 }
